<resources>
    <string name="app_name">RockPaperScissors</string>

    <string name="rock_button_text">ROCK</string>
    <string name="paper_button_text">PAPER</string>
    <string name="scissors_button_text">SCISSORS</string>

    <string name="welcome_text">Welcome to Rock-Paper-Scissors!</string>
    <string name="weapon_select_text"> Please choose your weapon:</string>

    <string name="score">Player: %1$d, Computer: %2$d</string>

    <string name="player_selection">Player\'s Weapon: %1$s</string>
    <string name="computer_selection">Computer\'s Weapon: %1$s</string>

    <string name="rock_win">Rock breaks Scissors!</string>
    <string name="paper_win">Paper covers Rock!</string>
    <string name="scissor_win">Scissors cuts Paper!</string>
    <string name="tie"> Its a Tie!</string>
</resources>